--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/netlify": "^6.2.5",
     "@astrojs/tailwind": "^5.1.0",
     "@netlify/blobs": "^6.4.2",
     "@netlify/functions": "^2.6.0",
